# mathedit-typst

./: README.md
frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/public/typst-fonts/: Libertinus-license.txt  source.txt
frontend/src/: App.svelte  app.css
frontend/src/lib/: PreviewViewer.svelte  PreviewZoom.svelte  monaco-typst-init.ts  typst-assets.ts  userWorker.ts  wasmUtils.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  web_structs.rs  web_structs_ide.rs
