[package]
name = "mathedit-typst"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
console_error_panic_hook = "0.1.7"
# serde = "1.0.219"
# strum = "0.27.1"
# strum_macros = "0.27.1"
typst = "0.13.1"
typst-html = "0.13.1"
typst-ide = "0.13.1"
typst-svg = "0.13.1"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# optimize binary size
# source: https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-size
lto = true
opt-level = 's'